# farsi-ebook

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  pyproject.toml
farsi2epub/: __init__.py  cli.py  config.py  epub.py  llm.py  locate.py  normalize.py  qc.py  render.py  review.py  transcribe.py  validators.py  workspace.py
tests/: bbox_eval.py  headings_regression.py  locator_regression.py
